# allj-cleaner

./: .gitattributes  GITHUB-FIRST-PUSH.md  LICENSE.md  PROPOSAL.md  README.md  SECURITY-PRIVACY-ROADMAP.md  build.bat  clean.bat  index.html  package-lock.json  package.json  run.bat  start.bat  tailwind.config.js
.cursor/skills/docs/: SKILL.md
docs/: FUTURE-TODO-LIST.md  GITHUB-FIRST-PUSH.md  GITHUB-TEAM-ONBOARDING.md  INITIAL-PROPOSAL.md  PERFORMANCE-TOOL-ROADMAP.md  SECURITY-PRIVACY-ROADMAP.md  TECH-STACK.md
scripts/: ensure-node.ps1  ensure-npm-audit.ps1  get-folder-size.ps1  prune-build-cache.ps1  stop-running-app.bat  test-release-runnable.ps1
src/: App.tsx  index.css  main.tsx  theme-palettes.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cleaner.rs  clipboard.rs  downloads.rs  lib.rs  models.rs  paths.rs  process_manager.rs  reboot_delete.rs  recycle_bin.rs  safety.rs  scanner.rs  single_instance.rs  system_clean.rs
src/components/: AboutModal.tsx  BlockingAppsModal.tsx  CategoryCard.tsx  CleanConfirmModal.tsx  CollapsibleScanSection.tsx  DownloadsConfirmModal.tsx  Header.tsx  HeaderIconButton.tsx  InterferenceAppList.tsx  NoAppsFoundModal.tsx  QuickCleanModal.tsx  SectionSelectionBar.tsx  SectionSortButton.tsx  SecureExitModal.tsx  SelectionToggle.tsx  TempCleanPrompt.tsx  ThemeModal.tsx  ThemePicker.tsx  WindowTitleBar.tsx
src/components/icons/: DetoxIcons.tsx
src/constants/: brand.ts  themes.ts
src/context/: ThemeContext.tsx
src/utils/: apps.ts  categories.ts  clean.ts  dependencies.ts  format.ts
